@@ -162,6 +162,8 @@ Deprecated
   removed at 1.7, and already its default value has changed from ``True`` to
   ``False``.
 * #3221: epub2 builder is deprecated
+* #3628: ``sphinx_themes`` entry_point is deprecated.  Please use
+  ``sphinx.html_themes`` instead.
 
 Release 1.5.6 (in development)
 ==============================
